[project]
name = "appu2"
version = "0.1.0"
description = "Automatic Podcast PUblisher, aka appu, is a toolkit for podcast edition and publishing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

[project.scripts]
appu = "appu2.cli:app"

[tool.uv]
package = true
