[project]
name = "appu2"
version = "0.1.0"
description = "Automatic Podcast PUblisher, aka appu, is a toolkit for podcast edition and publishing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

[project.scripts]
appu = "appu2.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ruff>=0.9.4"]

[tool.ruff]
# Excludes the old appu python code from the linting
exclude = ["appu"]

[tool.ruff.lint]
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
