[project]
name = "appu2"
version = "0.1.0"
description = "Automatic Podcast PUblisher, aka appu, is a toolkit for podcast edition and publishing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "boto3>=1.37.9",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
appu = "appu2.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.4",
]

[tool.ruff]
# Excludes the old appu python code from the linting
exclude = ["appu"]

[tool.ruff.lint]
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
# Excludes some rules for test files
"tests/**/*.py" = [
  "S101", # allows asserts in tests
]
